--- a/source/sass/_base.sass
+++ b/source/sass/_base.sass
@@ -228,6 +228,7 @@ main
 
     h1
       font-size: 3.5rem
+      font-weight: 400
 
     h2
       font-weight: 400
@@ -235,6 +236,9 @@ main
 
   @media (min-width: 768px)
     .title
+      text-align: left
+      margin-left: 1rem
+
       h1
         font-size: 5.5rem
 
@@ -246,6 +250,7 @@ main
   .intro
     background:
       position: center 5%
+    justify-content: flex-start
 
 @media (min-width: 1200px)
   .intro
